Tue, May 6, 2025, 1:49 PM -04:00

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
         <nav class="navbar navbar-expand-lg navbar-dark sticky-top">
             <div class="container">
                 <a class="navbar-brand d-flex align-items-center" href="#">
-                    <img src="../prep/logo.png" alt="Logo" width="40" height="40" class="me-2">
+                    <img src="prep/logo.png" alt="Logo" width="40" height="40" class="me-2">
                     Wireless Tech
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
@@ -190,7 +190,7 @@
                 <!-- Rocketbook Card -->
                 <div class="col-md-4">
                     <div class="card h-100">
-                        <img src="../prep/rocketbook-core (2).png" class="card-img-top" alt="Rocketbook">
+                        <img src="prep/rocketbook-core (2).png" class="card-img-top" alt="Rocketbook">
                         <div class="card-body">
                             <h5 class="card-title">Rocketbook Notebook</h5>
                             <ul class="list-unstyled">
@@ -207,7 +207,7 @@
                 <!-- Runaway Alarm Card -->
                 <div class="col-md-4">
                     <div class="card h-100">
-                        <img src="../prep/runaway-alarm.webp" class="card-img-top" alt="Runaway Alarm">
+                        <img src="prep/runaway-alarm.webp" class="card-img-top" alt="Runaway Alarm">
                         <div class="card-body">
                             <h5 class="card-title">Runaway Alarm Clock</h5>
                             <ul class="list-unstyled">
@@ -259,7 +259,7 @@
         <section id="future" class="container py-5">
             <h2 class="future-title text-center mb-4">Future Innovations</h2>
             <div class="aframe-container">
-                <iframe src="../tool/aframe-inventions.html" width="1280px" height="720px"></iframe>
+                <iframe src="tool/aframe-inventions.html" width="1280px" height="720px"></iframe>
             </div>
         </section>
 
