--- a/index.html
+++ b/index.html
@@ -1,17 +1,14 @@
 <!DOCTYPE html>
 <html>
-    <head>
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-
-        <link href="style.css" rel="stylesheet" type="text/css" />
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
-        <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;600&family=Oregano&family=Nunito:wght@400;700&display=swap" rel="stylesheet">
-
+    <link href="style.css" rel="stylesheet" type="text/css" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;600&family=Oregano&family=Nunito:wght@400;700&display=swap" rel="stylesheet">
 
     <style>
-
         .navbar-brand {
             color: black !important;
         }
@@ -19,8 +16,8 @@
         :root {
             --primary: #2B4570;
             --secondary: #A5D8FF;
-            --background: #FFFFFF;
-            --text: #333333;
+            --background: #000000; /* Changed background to black */
+            --text: #FFFFFF; /* Changed text color to white for readability on black background */
             --accent: #7BE0AD;
         }
 
@@ -43,6 +40,8 @@
             transition: transform 0.3s;
             border: 2px solid var(--secondary);
             margin-bottom: 1.5rem;
+            background-color: #1a1a1a; /* Added a slightly lighter background for cards */
+            color: var(--text); /* Ensure card text is readable */
         }
 
         .card:hover {
@@ -80,182 +79,219 @@
             border-radius: 50%;
             background: var(--accent);
         }
+
+        .hero-section {
+            position: relative;
+            width: 100%;
+            height: 90vh;
+            background: url('prep/background-image.webp') no-repeat center center/cover;
+            background-attachment: fixed;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            text-align: center;
+            color: white;
+            overflow: hidden;
+        }
+
+        .hero-section::before {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: linear-gradient(to bottom, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.5) 50%, rgba(0, 0, 0, 1) 100%);
+            z-index: 0;
+        }
+
+        .hero-title {
+            position: relative;
+            z-index: 1;
+            font-family: 'Oregano', cursive;
+            font-size: 4rem;
+            color: white;
+            text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+        }
     </style>
 
-        <title>Wireless Communication Tech</title>
-    </head>
+    <title>Wireless Communication Tech</title>
+</head>
 
-    <!-- HTML -->
-    <body>
-        <!-- Navbar -->
-        <nav class="navbar navbar-expand-lg navbar-dark sticky-top">
-            <div class="container">
-                <a class="navbar-brand d-flex align-items-center" href="#">
-                    <img src="prep/logo.png" alt="Logo" width="40" height="40" class="me-2">
-                    Wireless Tech
-                </a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarNav">
-                    <ul class="navbar-nav ms-auto">
-                        <li class="nav-item"><a class="nav-link" href="#future">Future Innovations</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#current">Current Tech</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#timeline">Timeline</a></li>
-                    </ul>
-                </div>
+<body>
+    <!-- Navbar -->
+    <nav class="navbar navbar-expand-lg navbar-dark sticky-top">
+        <div class="container">
+            <a class="navbar-brand d-flex align-items-center" href="#">
+                <img src="prep/logo.png" alt="Logo" width="40" height="40" class="me-2">
+                Wireless Tech
+            </a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item"><a class="nav-link" href="#future">Future Innovations</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#current">Current Tech</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#timeline">Timeline</a></li>
+                </ul>
             </div>
-        </nav>
+        </div>
+    </nav>
 
-        <!-- Current Technologies -->
-        <section id="current" class="container py-5">
-            <h2 class="text-center mb-5">Current Technologies</h2>
+    <!-- Hero Section with Background and Title -->
+    <section class="hero-section">
+        <h1 class="hero-title">Wireless Tech</h1>
+    </section>
 
-            <h3 class="mb-4">Communication Apps</h3>
-            <div class="row g-4">
-                <!-- TextNow Card -->
-                <div class="col-md-4">
-                    <div class="card h-100">
-                        <img src="prep/textnow.png" class="card-img-top" alt="TextNow">
-                        <div class="card-body">
-                            <h5 class="card-title">TextNow</h5>
-                            <ul class="list-unstyled">
-                                <li>📱 Private messaging</li>
-                                <li>📞 Voice calls</li>
-                                <li>💻 Cross-device use</li>
-                                <li>📸 Media sharing</li>
-                                <li>🔢 Virtual phone number</li>
-                            </ul>
-                            <a href="https://www.textnow.com/" class="btn btn-primary w-100">Visit TextNow</a>
-                        </div>
-                    </div>
-                </div>
+    <!-- Current Technologies -->
+    <section id="current" class="container py-5">
+        <h2 class="text-center mb-5">Current Technologies</h2>
 
-                <!-- Google Voice Card -->
-                <div class="col-md-4">
-                    <div class="card h-100">
-                        <img src="prep/google-voice.png" class="card-img-top" alt="Google Voice">
-                        <div class="card-body">
-                            <h5 class="card-title">Google Voice</h5>
-                            <ul class="list-unstyled">
-                                <li>📨 Text & voice messages</li>
-                                <li>📞 Free calls</li>
-                                <li>📝 Voicemail transcription</li>
-                                <li>📲 Call forwarding</li>
-                                <li>🚫 Spam filtering</li>
-                            </ul>
-                            <a href="https://voice.google.com" class="btn btn-primary w-100">Visit Google Voice</a>
-                        </div>
-                    </div>
-                </div>
-
-                <!-- Telegram Card -->
-                <div class="col-md-4">
-                    <div class="card h-100">
-                        <img src="prep/telegram.png" class="card-img-top" alt="Telegram">
-                        <div class="card-body">
-                            <h5 class="card-title">Telegram</h5>
-                            <ul class="list-unstyled">
-                                <li>⚡ Instant messaging</li>
-                                <li>🔐 Secret chats</li>
-                                <li>📁 Large file sharing</li>
-                                <li>👥 Groups & channels</li>
-                                <li>🌐 Cross-platform</li>
-                            </ul>
-                            <a href="https://web.telegram.org" class="btn btn-primary w-100">Visit Telegram</a>
-                        </div>
+        <h3 class="mb-4">Communication Apps</h3>
+        <div class="row g-4">
+            <!-- TextNow Card -->
+            <div class="col-md-4">
+                <div class="card h-100">
+                    <img src="prep/textnow.png" class="card-img-top" alt="TextNow">
+                    <div class="card-body">
+                        <h5 class="card-title">TextNow</h5>
+                        <ul class="list-unstyled">
+                            <li>📱 Private messaging</li>
+                            <li>📞 Voice calls</li>
+                            <li>💻 Cross-device use</li>
+                            <li>📸 Media sharing</li>
+                            <li>🔢 Virtual phone number</li>
+                        </ul>
+                        <a href="https://www.textnow.com/" class="btn btn-primary w-100">Visit TextNow</a>
                     </div>
                 </div>
             </div>
 
-            <h3 class="mt-5 mb-4">Innovative Devices</h3>
-            <div class="row g-4">
-                <!-- Airfly Card -->
-                <div class="col-md-4">
-                    <div class="card h-100">
-                        <img src="prep/Screenshot 2025-05-04 131253.png" class="card-img-top" alt="Airfly">
-                        <div class="card-body">
-                            <h5 class="card-title">Airfly Transmitter</h5>
-                            <ul class="list-unstyled">
-                                <li>🎧 Wireless headphones adapter</li>
-                                <li>🔋 Use while charging</li>
-                                <li>✈️ Travel-friendly</li>
-                                <li>⏳ Long battery life</li>
-                                <li>📶 No wires needed</li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-
-                <!-- Rocketbook Card -->
-                <div class="col-md-4">
-                    <div class="card h-100">
-                        <img src="prep/rocketbook-core (2).png" class="card-img-top" alt="Rocketbook">
-                        <div class="card-body">
-                            <h5 class="card-title">Rocketbook Notebook</h5>
-                            <ul class="list-unstyled">
-                                <li>🌱 Eco-friendly</li>
-                                <li>💾 Cloud saving</li>
-                                <li>🧼 Easy cleaning</li>
-                                <li>📘 16 reusable pages</li>
-                                <li>🎨 Multiple colors/sizes</li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-
-                <!-- Runaway Alarm Card -->
-                <div class="col-md-4">
-                    <div class="card h-100">
-                        <img src="prep/runaway-alarm.webp" class="card-img-top" alt="Runaway Alarm">
-                        <div class="card-body">
-                            <h5 class="card-title">Runaway Alarm Clock</h5>
-                            <ul class="list-unstyled">
-                                <li>🏃♂️ Mobile alarm</li>
-                                <li>🎶 Plays music</li>
-                                <li>⏰ For heavy sleepers</li>
-                                <li>👶 Kid-friendly</li>
-                                <li>✅ Easy setup</li>
-                            </ul>
-                        </div>
+            <!-- Google Voice Card -->
+            <div class="col-md-4">
+                <div class="card h-100">
+                    <img src="prep/google-voice.png" class="card-img-top" alt="Google Voice">
+                    <div class="card-body">
+                        <h5 class="card-title">Google Voice</h5>
+                        <ul class="list-unstyled">
+                            <li>📨 Text & voice messages</li>
+                            <li>📞 Free calls</li>
+                            <li>📝 Voicemail transcription</li>
+                            <li>📲 Call forwarding</li>
+                            <li>🚫 Spam filtering</li>
+                        </ul>
+                        <a href="https://voice.google.com" class="btn btn-primary w-100">Visit Google Voice</a>
                     </div>
                 </div>
             </div>
-        </section>
 
-        <!-- Innovation Timeline -->
-        <section id="timeline" class="container py-5">
-            <h2 class="text-center mb-5">Innovation Timeline</h2>
-            <div class="timeline">
-                <div class="timeline-item">
-                    <h4>2006 - Runaway Alarm Clock</h4>
-                    <p>Mobile alarm clock that moves around to ensure you wake up</p>
-                </div>
-                <div class="timeline-item">
-                    <h4>2009 - Google Voice</h4>
-                    <p>Internet-based phone service with voicemail transcription</p>
-                </div>
-                <div class="timeline-item">
-                    <h4>2009 - TextNow</h4>
-                    <p>Free calling and texting app using WiFi connection</p>
-                </div>
-                <div class="timeline-item">
-                    <h4>2013 - Telegram</h4>
-                    <p>Secure cloud-based messaging service</p>
-                </div>
-                <div class="timeline-item">
-                    <h4>2014 - Rocketbook Core</h4>
-                    <p>Reusable smart notebook with digital saving</p>
-                </div>
-                <div class="timeline-item">
-                    <h4>2018 - Airfly Transmitter</h4>
-                    <p>Wireless audio adapter for non-Bluetooth devices</p>
+            <!-- Telegram Card -->
+            <div class="col-md-4">
+                <div class="card h-100">
+                    <img src="prep/telegram.png" class="card-img-top" alt="Telegram">
+                    <div class="card-body">
+                        <h5 class="card-title">Telegram</h5>
+                        <ul class="list-unstyled">
+                            <li>⚡ Instant messaging</li>
+                            <li>🔐 Secret chats</li>
+                            <li>📁 Large file sharing</li>
+                            <li>👥 Groups & channels</li>
+                            <li>🌐 Cross-platform</li>
+                        </ul>
+                        <a href="https://web.telegram.org" class="btn btn-primary w-100">Visit Telegram</a>
+                    </div>
                 </div>
             </div>
-        </section>
+        </div>
 
-        <!-- Aframe models -->
+        <h3 class="mt-5 mb-4">Innovative Devices</h3>
+        <div class="row g-4">
+            <!-- Airfly Card -->
+            <div class="col-md-4">
+                <div class="card h-100">
+                    <img src="prep/airfly.png" class="card-img-top" alt="Airfly">
+                    <div class="card-body">
+                        <h5 class="card-title">Airfly Transmitter</h5>
+                        <ul class="list-unstyled">
+                            <li>🎧 Wireless headphones adapter</li>
+                            <li>🔋 Use while charging</li>
+                            <li>✈️ Travel-friendly</li>
+                            <li>⏳ Long battery life</li>
+                            <li>📶 No wires needed</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
 
+            <!-- Rocketbook Card -->
+            <div class="col-md-4">
+                <div class="card h-100">
+                    <img src="prep/rocketbook-core (2).png" class="card-img-top" alt="Rocketbook">
+                    <div class="card-body">
+                        <h5 class="card-title">Rocketbook Notebook</h5>
+                        <ul class="list-unstyled">
+                            <li>🌱 Eco-friendly</li>
+                            <li>💾 Cloud saving</li>
+                            <li>🧼 Easy cleaning</li>
+                            <li>📘 16 reusable pages</li>
+                            <li>🎨 Multiple colors/sizes</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Runaway Alarm Card -->
+            <div class="col-md-4">
+                <div class="card h-100">
+                    <img src="prep/runaway-alarm.webp" class="card-img-top" alt="Runaway Alarm">
+                    <div class="card-body">
+                        <h5 class="card-title">Runaway Alarm Clock</h5>
+                        <ul class="list-unstyled">
+                            <li>🏃♂️ Mobile alarm</li>
+                            <li>🎶 Plays music</li>
+                            <li>⏰ For heavy sleepers</li>
+                            <li>👶 Kid-friendly</li>
+                            <li>✅ Easy setup</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Innovation Timeline -->
+    <section id="timeline" class="container py-5">
+        <h2 class="text-center mb-5">Innovation Timeline</h2>
+        <div class="timeline">
+            <div class="timeline-item">
+                <h4>2006 - Runaway Alarm Clock</h4>
+                <p>Mobile alarm clock that moves around to ensure you wake up</p>
+            </div>
+            <div class="timeline-item">
+                <h4>2009 - Google Voice</h4>
+                <p>Internet-based phone service with voicemail transcription</p>
+            </div>
+            <div class="timeline-item">
+                <h4>2009 - TextNow</h4>
+                <p>Free calling and texting app using WiFi connection</p>
+            </div>
+            <div class="timeline-item">
+                <h4>2013 - Telegram</h4>
+                <p>Secure cloud-based messaging service</p>
+            </div>
+            <div class="timeline-item">
+                <h4>2014 - Rocketbook Core</h4>
+                <p>Reusable smart notebook with digital saving</p>
+            </div>
+            <div class="timeline-item">
+                <h4>2018 - Airfly Transmitter</h4>
+                <p>Wireless audio adapter for non-Bluetooth devices</p>
+            </div>
+        </div>
+    </section>
+
+    <!-- Aframe models -->
         <section id="future" class="container py-5">
             <h2 class="future-title text-center mb-4">Future Innovations</h2>
             <div class="aframe-container">
@@ -263,14 +299,5 @@
             </div>
         </section>
 
-
-
-
-    </body>
-    </html>
-
-
-
-        </script>
-    </body>
+</body>
 </html>
