Wed, May 7, 2025, 10:57 AM -04:00

--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
         <div class="container">
             <a class="navbar-brand d-flex align-items-center" href="#">
                 <img src="prep/logo.png" alt="Logo" width="40" height="40" class="me-2">
-                Wireless Tech
+                Wireless Communication
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
@@ -154,7 +154,7 @@
 
     <!-- Hero Section with Background and Title -->
     <section class="hero-section">
-        <h1 class="hero-title">Wireless Tech</h1>
+        <h1 class="hero-title">Wireless Communication</h1>
         <p class="hero-description">Explore the evolution and future of wireless communication technologies, from current apps and devices to exciting innovations on the horizon.</p>
     </section>
 
