--- a/index.html
+++ b/index.html
@@ -87,13 +87,13 @@
             background: url('prep/background-image.webp') no-repeat center center/cover;
             background-attachment: fixed;
             display: flex;
-            flex-direction: column; /* Added to stack elements vertically */
+            flex-direction: column;
             justify-content: center;
             align-items: center;
             text-align: center;
             color: white;
             overflow: hidden;
-            padding-bottom: 10vh; /* Added padding to make space for the description below */
+            padding-bottom: 10vh;
         }
 
         .hero-section::before {
@@ -114,8 +114,8 @@
             font-size: 4rem;
             color: white;
             text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
-            margin-bottom: 1rem; /* Added margin to separate title from description */
-            margin-top: -10vh; /* Adjusted margin-top to move the title higher */
+            margin-bottom: 1rem;
+            margin-top: -10vh;
         }
 
         .hero-description {
@@ -124,7 +124,7 @@
             font-size: 1.5rem;
             color: white;
             text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
-            max-width: 80%; /* Limit the width of the description */
+            max-width: 80%;
         }
     </style>
 
