--- a/index.html
+++ b/index.html
@@ -126,6 +126,22 @@
             text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
             max-width: 80%;
         }
+
+        .context-section {
+            padding: 3rem 0;
+            text-align: center;
+        }
+
+        .context-section h2 {
+            margin-bottom: 1.5rem;
+        }
+
+        .context-section p {
+            font-size: 1.2rem;
+            max-width: 800px;
+            margin: 0 auto;
+            color: var(--text);
+        }
     </style>
 
     <title>Wireless Communication Tech</title>
@@ -137,7 +153,7 @@
         <div class="container">
             <a class="navbar-brand d-flex align-items-center" href="#">
                 <img src="prep/logo.png" alt="Logo" width="40" height="40" class="me-2">
-                Wireless Communication
+                Wireless Tech
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
@@ -154,8 +170,16 @@
 
     <!-- Hero Section with Background and Title -->
     <section class="hero-section">
-        <h1 class="hero-title">Wireless Communication</h1>
+        <h1 class="hero-title">Wireless Tech</h1>
         <p class="hero-description">Explore the evolution and future of wireless communication technologies, from current apps and devices to exciting innovations on the horizon.</p>
+    </section>
+
+    <!-- Context Section -->
+    <section class="context-section">
+        <div class="container">
+            <h2>Context</h2> <!-- Added the title for the context section -->
+            <p>Wireless communication technology helps people stay in touch and makes everyday tasks easier. It includes apps for texting and calling, as well as gadgets that use wireless technology to improve daily life. As technology gets better, wireless communication is becoming more important in how we live and work.</p>
+        </div>
     </section>
 
     <!-- Current Technologies -->
