Wed, May 7, 2025, 11:09 AM -04:00

--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
     <!-- Context Section -->
     <section class="context-section">
         <div class="container">
-            <h2>Context</h2> <!-- Added the title for the context section -->
+            <h2>Context</h2>
             <p>Wireless communication technology helps people stay in touch and makes everyday tasks easier. It includes apps for texting and calling, as well as gadgets that use wireless technology to improve daily life. As technology gets better, wireless communication is becoming more important in how we live and work.</p>
         </div>
     </section>
