Wed, May 7, 2025, 11:16 AM -04:00

--- a/index.html
+++ b/index.html
@@ -338,5 +338,11 @@
             </div>
         </section>
 
-</body>
+    </body>
+    </html>
+            
+
+
+        </script>
+    </body>
 </html>
