--- a/index.html
+++ b/index.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <head>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link href="style.css" rel="stylesheet" type="text/css" />
-    <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;600&family=Oregano&family=Nunito:wght@400;700&display=swap" rel="stylesheet">
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
+        <link href="style.css" rel="stylesheet" type="text/css" />
+        <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;600&family=Oregano&family=Nunito:wght@400;700&display=swap" rel="stylesheet">
 
-    <style>
+        <style>
+            /* CSS */
+
         .navbar-brand {
             color: black !important;
         }
@@ -142,12 +144,31 @@
             margin: 0 auto;
             color: var(--text);
         }
-    </style>
 
-    <title>Wireless Communication Tech</title>
-</head>
+        
+        .aframe-container {
+            position: relative;
+            width: 100%;
+            padding-bottom: 56.25%;
+            height: 0;
+            overflow: hidden;
+        }
 
-<body>
+        .aframe-container iframe {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            border: 0;
+        }
+        </style>
+
+        <title>Wireless Communication Tech</title>
+    </head>
+    <body>
+        <!-- HTML -->
+
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-dark sticky-top">
         <div class="container">
@@ -155,7 +176,7 @@
                 <img src="prep/logo.png" alt="Logo" width="40" height="40" class="me-2">
                 Wireless Tech
             </a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
@@ -333,7 +354,7 @@
         <section id="future" class="container py-5">
             <h2 class="future-title text-center mb-4">Future Innovations</h2>
             <div class="aframe-container">
-                <iframe src="tool/aframe-inventions.html" width="1125px" height="700px"></iframe>
+                <iframe src="tool/aframe-inventions.html"></iframe>
             </div>
         </section>
 
