--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
             color: var(--text);
         }
 
-        
+
         .aframe-container {
             position: relative;
             width: 100%;
@@ -362,7 +362,23 @@
         <!-- <script src="script.js"></script> -->
         <script>
             // JS
+            const links = document.querySelectorAll(".nav-link"); // or any other selector what you want
 
+for (const link of links) {
+  link.addEventListener("click", scrollToSection);
+}
+
+function scrollToSection(e) {
+  e.preventDefault();
+  const href = this.getAttribute("href");
+  const offsetTop = document.querySelector(href).offsetTop;
+  const navbarHeight = document.querySelector(".navbar").offsetHeight
+
+  scroll({
+    top: offsetTop - navbarHeight,
+    behavior: "smooth"
+  });
+}
 
         </script>
     </body>
