--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
             <!-- TextNow Card -->
             <div class="col-md-4">
                 <div class="card h-100">
-                    <img src="prep/textnow.png" class="card-img-top" alt="TextNow">
+                    <img src="prep/images/textnow.png" class="card-img-top" alt="TextNow">
                     <div class="card-body">
                         <h5 class="card-title">TextNow</h5>
                         <ul class="list-unstyled">
@@ -230,7 +230,7 @@
             <!-- Google Voice Card -->
             <div class="col-md-4">
                 <div class="card h-100">
-                    <img src="prep/google-voice.png" class="card-img-top" alt="Google Voice">
+                    <img src="prep/images/google-voice.png" class="card-img-top" alt="Google Voice">
                     <div class="card-body">
                         <h5 class="card-title">Google Voice</h5>
                         <ul class="list-unstyled">
@@ -248,7 +248,7 @@
             <!-- Telegram Card -->
             <div class="col-md-4">
                 <div class="card h-100">
-                    <img src="prep/telegram.png" class="card-img-top" alt="Telegram">
+                    <img src="prep/images/telegram.png" class="card-img-top" alt="Telegram">
                     <div class="card-body">
                         <h5 class="card-title">Telegram</h5>
                         <ul class="list-unstyled">
@@ -269,7 +269,7 @@
             <!-- Airfly Card -->
             <div class="col-md-4">
                 <div class="card h-100">
-                    <img src="prep/airfly.png" class="card-img-top" alt="Airfly">
+                    <img src="prep/images/airfly.png" class="card-img-top" alt="Airfly">
                     <div class="card-body">
                         <h5 class="card-title">Airfly Transmitter</h5>
                         <ul class="list-unstyled">
@@ -286,7 +286,7 @@
             <!-- Rocketbook Card -->
             <div class="col-md-4">
                 <div class="card h-100">
-                    <img src="prep/rocketbook-core (2).png" class="card-img-top" alt="Rocketbook">
+                    <img src="prep/images/rocketbook-core (2).png" class="card-img-top" alt="Rocketbook">
                     <div class="card-body">
                         <h5 class="card-title">Rocketbook Notebook</h5>
                         <ul class="list-unstyled">
@@ -303,7 +303,7 @@
             <!-- Runaway Alarm Card -->
             <div class="col-md-4">
                 <div class="card h-100">
-                    <img src="prep/runaway-alarm.webp" class="card-img-top" alt="Runaway Alarm">
+                    <img src="prep/images/runaway-alarm.webp" class="card-img-top" alt="Runaway Alarm">
                     <div class="card-body">
                         <h5 class="card-title">Runaway Alarm Clock</h5>
                         <ul class="list-unstyled">
