update index.html and aframe-inventions.html

--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
         <div class="container">
             <a class="navbar-brand d-flex align-items-center" href="#">
                 <img src="prep/logo.png" alt="Logo" width="40" height="40" class="me-2">
-                Wireless Tech
+                Wireless Communication
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -191,7 +191,7 @@
 
     <!-- Hero Section with Background and Title -->
     <section class="hero-section">
-        <h1 class="hero-title">Wireless Tech</h1>
+        <h1 class="hero-title">Wireless Communication</h1>
         <p class="hero-description">Explore the evolution and future of wireless communication technologies, from current apps and devices to exciting innovations on the horizon.</p>
     </section>
 
@@ -286,7 +286,7 @@
             <!-- Rocketbook Card -->
             <div class="col-md-4">
                 <div class="card h-100">
-                    <img src="prep/images/rocketbook-core (2).png" class="card-img-top" alt="Rocketbook">
+                    <img src="prep/images/rocketbook-core.png" class="card-img-top" alt="Rocketbook">
                     <div class="card-body">
                         <h5 class="card-title">Rocketbook Notebook</h5>
                         <ul class="list-unstyled">
@@ -303,7 +303,7 @@
             <!-- Runaway Alarm Card -->
             <div class="col-md-4">
                 <div class="card h-100">
-                    <img src="prep/images/runaway-alarm.webp" class="card-img-top" alt="Runaway Alarm">
+                    <img src="prep/images/runaway-alarm.png" class="card-img-top" alt="Runaway Alarm">
                     <div class="card-body">
                         <h5 class="card-title">Runaway Alarm Clock</h5>
                         <ul class="list-unstyled">
