--- a/index.html
+++ b/index.html
@@ -11,6 +11,12 @@
         <style>
             /* CSS */
 
+          .alarm-img {
+            width: 100%;
+            height: 300px;
+            object-fit: contain;
+          }
+
         .navbar-brand {
             color: black !important;
         }
@@ -181,9 +187,9 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
-                    <li class="nav-item"><a class="nav-link" href="#future">Future Innovations</a></li>
                     <li class="nav-item"><a class="nav-link" href="#current">Current Tech</a></li>
                     <li class="nav-item"><a class="nav-link" href="#timeline">Timeline</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#future">Future Innovations</a></li>
                 </ul>
             </div>
         </div>
@@ -300,23 +306,27 @@
                 </div>
             </div>
 
+
             <!-- Runaway Alarm Card -->
             <div class="col-md-4">
-                <div class="card h-100">
-                    <img src="prep/images/runaway-alarm.png" class="card-img-top" alt="Runaway Alarm">
-                    <div class="card-body">
-                        <h5 class="card-title">Runaway Alarm Clock</h5>
-                        <ul class="list-unstyled">
-                            <li>🏃♂️ Mobile alarm</li>
-                            <li>🎶 Plays music</li>
-                            <li>⏰ For heavy sleepers</li>
-                            <li>👶 Kid-friendly</li>
-                            <li>✅ Easy setup</li>
-                        </ul>
-                    </div>
+              <div class="card h-100">
+                <img
+                  src="prep/images/runaway-alarm.png"
+                  class="card-img-top alarm-img"
+                  alt="Runaway Alarm"
+                />
+                <div class="card-body">
+                  <h5 class="card-title">Runaway Alarm Clock</h5>
+                  <ul class="list-unstyled">
+                    <li>🏃♂️ Mobile alarm</li>
+                    <li>🎶 Plays music</li>
+                    <li>⏰ For heavy sleepers</li>
+                    <li>👶 Kid-friendly</li>
+                    <li>✅ Easy setup</li>
+                  </ul>
                 </div>
+              </div>
             </div>
-        </div>
     </section>
 
     <!-- Innovation Timeline -->
@@ -362,23 +372,24 @@
         <!-- <script src="script.js"></script> -->
         <script>
             // JS
-            const links = document.querySelectorAll(".nav-link"); // or any other selector what you want
 
-for (const link of links) {
-  link.addEventListener("click", scrollToSection);
-}
+        const links = document.querySelectorAll(".nav-link");
 
-function scrollToSection(e) {
-  e.preventDefault();
-  const href = this.getAttribute("href");
-  const offsetTop = document.querySelector(href).offsetTop;
-  const navbarHeight = document.querySelector(".navbar").offsetHeight
+        for (const link of links) {
+        link.addEventListener("click", scrollToSection);
+        }
 
-  scroll({
-    top: offsetTop - navbarHeight,
-    behavior: "smooth"
-  });
-}
+        function scrollToSection(e) {
+        e.preventDefault();
+        const href = this.getAttribute("href");
+        const offsetTop = document.querySelector(href).offsetTop;
+        const navbarHeight = document.querySelector(".navbar").offsetHeight
+
+        scroll({
+            top: offsetTop - navbarHeight,
+            behavior: "smooth"
+        });
+        }
 
         </script>
     </body>
