--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
         <style>
             /* CSS */
 
-          .alarm-img {
+
+
+        .alarm-img {
             width: 100%;
             height: 300px;
             object-fit: contain;
@@ -313,8 +315,7 @@
                 <img
                   src="prep/images/runaway-alarm.png"
                   class="card-img-top alarm-img"
-                  alt="Runaway Alarm"
-                />
+                  alt="Runaway Alarm"/>
                 <div class="card-body">
                   <h5 class="card-title">Runaway Alarm Clock</h5>
                   <ul class="list-unstyled">
