Wed, May 14, 2025, 8:07 PM -04:00

--- a/tool/aframe-tinkering-1 copy.html
+++ b/tool/aframe-tinkering-1 copy.html
@@ -1,24 +1,230 @@
 <html>
   <head>
-    <title>L08
-   </head>
-
-Image textures and materials</title>
-<script src="https://aframe.io/releases/0.7.0/aframe.min.js"></script>
-
+    <title>Advanced Invention Showcase</title>
+    <script src="https://aframe.io/releases/1.2.0/aframe.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/aframe-extras@6.1.0/dist/aframe-extras.min.js"></script>
+    <script src="https://unpkg.com/aframe-particle-system-component@1.1.x/dist/aframe-particle-system-component.min.js"></script>
+    <script src="https://unpkg.com/aframe-text-geometry-component@^3.0.0/dist/aframe-text-geometry-component.min.js"></script>
+    <style>
+      body { margin: 0; overflow: hidden; }
+      .info-panel {
+        position: fixed;
+        top: 20px;
+        left: 20px;
+        background: rgba(0,0,0,0.8);
+        color: white;
+        padding: 15px;
+        border-radius: 10px;
+        width: 300px;
+        display: none;
+      }
+    </style>
+  </head>
   <body>
-    <a-scene>
-    <!-- Light-Blue Box -->
-    <a-box color="#FFFFFF"
-    src="wdsa"
-    repeat="1 1"
-    normal-map=""
-    width="4" height="4" depth="4" position="-2 1.5 -9">
-          </a-box>
-          <!-- Brown Box -->
-    <a-box color="#795548"
-          width="4" height="4" depth="4" position="2 1.5 -9">
+    <div class="info-panel" id="info"></div>
+
+    <a-scene background="color: #000" cursor="rayOrigin: mouse">
+      <!-- Lighting -->
+      <a-entity light="type: ambient; color: #445; intensity: 0.5"></a-entity>
+      <a-entity light="type: directional; color: #fff; intensity: 0.8" position="-5 5 5"></a-entity>
+
+      <!-- Floor -->
+      <a-plane rotation="-90 0 0" width="50" height="25" color="#111" shadow
+               material="roughness: 0.8; metalness: 0.2"></a-plane>
+
+      <!-- MindLink Messaging -->
+      <a-entity position="-10 0 0" class="clickable" mindlink-controls>
+        <a-entity position="0 1.5 -3" id="mindlinkDevice">
+          <!-- Main Device -->
+          <a-torus color="#2e86de" radius="0.5" radius-tubular="0.03" rotation="0 0 90"
+                   animation="property: rotation; to: 0 360 90; loop: true; dur: 10000">
+            <a-animation attribute="color" from="#2e86de" to="#54a0ff" dur="2000" repeat="indefinite"></a-animation>
+          </a-torus>
+
+          <!-- Neural Sensors -->
+          <a-entity class="sensor-group" position="0 0.1 0">
+            <a-sphere position="0.5 0 0" radius="0.05" color="#74b9ff"
+                      animation="property: scale; to: 1.5 1.5 1.5; dir: alternate; loop: true; dur: 1000"></a-sphere>
+            <a-sphere position="-0.5 0 0" radius="0.05" color="#74b9ff"
+                      animation="property: scale; to: 1.5 1.5 1.5; dir: alternate; loop: true; dur: 1200"></a-sphere>
+            <a-sphere position="0 0 0.5" radius="0.05" color="#74b9ff"
+                      animation="property: scale; to: 1.5 1.5 1.5; dir: alternate; loop: true; dur: 1400"></a-sphere>
+            <a-sphere position="0 0 -0.5" radius="0.05" color="#74b9ff"
+                      animation="property: scale; to: 1.5 1.5 1.5; dir: alternate; loop: true; dur: 1600"></a-sphere>
+          </a-entity>
+
+          <!-- Processing Unit -->
+          <a-entity class="processing-unit" position="0 0.3 0">
+            <a-box depth="0.2" height="0.2" width="0.3" color="#192a56"
+                   animation="property: rotation; to: 0 0 15; dir: alternate; loop: true; dur: 2000">
+              <a-box depth="0.15" height="0.15" width="0.25" color="#273c75"
+                     position="0 0.1 0" animation="property: rotation; to: 0 0 -15; dir: alternate; loop: true; dur: 2000"></a-box>
+            </a-box>
+          </a-entity>
+
+          <!-- Data Stream -->
+          <a-entity class="data-stream" position="0 0.5 0">
+            <a-cylinder height="1" radius="0.02" color="#4cd137"
+                      animation="property: position; to: 0 2 0; dir: alternate; loop: true; dur: 1000">
+              <a-animation attribute="color" from="#4cd137" to="#2ecc71" dur="1500" repeat="indefinite"></a-animation>
+            </a-cylinder>
+            <!-- Additional data streams... -->
+          </a-entity>
+
+          <!-- Thought Bubble -->
+          <a-entity class="thought-bubble" position="0 2 0">
+            <a-sphere radius="0.3" color="#f8c291" opacity="0.9"
+                     animation="property: scale; to: 1.2 1.2 1.2; dir: alternate; loop: true; dur: 1500">
+              <a-text geometry="value: \uD83D\uDCA1;" material="color: #ff9f43"
+                     position="0 0 0.1" scale="0.5 0.5 0.5"></a-text>
+            </a-sphere>
+            <a-entity geometry="primitive: plane; width: 1; height: 0.5"
+                     material="color: #f6e58d; side: double" position="0 2.8 0">
+              <a-text value="Thinking..." align="center" color="#000" width="5"
+                     animation="property: components.text.value; to: 'Message Sent!'; dir: alternate; dur: 2000; startEvents: click"></a-text>
+            </a-entity>
+          </a-entity>
+        </a-entity>
+
+        <!-- Base Structure -->
+        <a-box color="#16a085" position="0 0.5 -3" depth="0.3" width="0.3" height="1.5"
+               material="roughness: 0.4; metalness: 0.1">
+          <a-sphere color="#27ae60" position="0 1.2 0" radius="0.2"
+                    animation="property: scale; to: 1.2 1.2 1.2; dir: alternate; loop: true; dur: 800"></a-sphere>
         </a-box>
-      </a-scene>
-    </body>
-   </html>
+
+        <!-- Interactive Panel -->
+        <a-entity position="-8 1 -3" rotation="0 -30 0">
+          <a-box color="#000435" width="0.7" depth="0.1" height="1.4" scale="3 3 1"
+                 animation="property: position; to: -8 1.2 -3; dir: alternate; loop: true; dur: 2000">
+            <a-text value="MindLink Messaging" color="#fff" position="0 0.6 0.06" align="center" width="5"></a-text>
+            <a-text value="1. Neural Thought Transmission\n2. Instant Idea Sharing\n3. Secure Mind Encryption"
+                   position="0 0.3 0.06" align="left" width="2.5" color="#ddd" scale="0.8 0.8 0.8"></a-text>
+            <a-box color="#2e86de" position="0 -0.4 0.06" width="0.4" depth="0.02" height="0.1"
+                   animation="property: rotation; to: 0 0 5; dir: alternate; loop: true; dur: 1000">
+              <a-text value="ACTIVATE" color="#fff" align="center" position="0 0 0.01" scale="0.5 0.5 0.5"></a-text>
+            </a-box>
+          </a-box>
+        </a-entity>
+      </a-entity>
+
+      <!-- Smart Translator -->
+      <a-entity position="0 0 0" class="clickable" translator-controls>
+        <!-- Main Device Structure -->
+        <a-entity position="0 1 -3">
+          <a-box color="#2ecc71" depth="0.5" height="0.8" width="0.3" position="0 0.4 0"
+                 material="roughness: 0.8; metalness: 0.2">
+            <a-box color="#34495e" depth="0.05" height="0.2" width="0.25" position="0 0.25 0.26"
+                   animation="property: material.color; type: color; to: #2c3e50; dir: alternate; dur: 1000; loop: true"></a-box>
+
+            <!-- Display Screen -->
+            <a-plane position="0 0.3 0.26" width="0.2" height="0.3" color="#2980b9" material="opacity: 0.8">
+              <a-entity geometry="primitive: plane; width: 0.18; height: 0.28" material="color: #1abc9c; side: double"
+                        text="value: English → Español; align: center; color: #fff; wrapCount: 20"
+                        animation="property: components.text.value; to: 'Français → Deutsch'; dur: 3000; loop: true"></a-entity>
+            </a-plane>
+
+            <!-- Control Buttons -->
+            <a-entity position="0 0.05 0.26">
+              <a-box depth="0.05" height="0.05" width="0.05" color="#e74c3c"
+                     animation="property: scale; to: 1.2 1.2 1.2; dir: alternate; loop: true; dur: 1000"></a-box>
+              <a-box position="0.1 0 0" depth="0.05" height="0.05" width="0.05" color="#3498db"
+                     animation="property: scale; to: 1.2 1.2 1.2; dir: alternate; loop: true; dur: 1200"></a-box>
+              <a-box position="-0.1 0 0" depth="0.05" height="0.05" width="0.05" color="#f39c12"
+                     animation="property: scale; to: 1.2 1.2 1.2; dir: alternate; loop: true; dur: 1400"></a-box>
+            </a-entity>
+          </a-box>
+        </a-entity>
+
+        <!-- Translation Beams -->
+        <a-entity class="translation-beams">
+          <a-light type="spot" angle="30" color="#27ae60" intensity="0.8" position="-0.5 1 -3"
+                   target="#translationTarget1" animation="property: intensity; to: 0.3; dur: 1000; loop: true"></a-light>
+          <a-light type="spot" angle="30" color="#3498db" intensity="0.8" position="0.5 1 -3"
+                   target="#translationTarget2" animation="property: intensity; to: 0.3; dur: 1200; loop: true"></a-light>
+        </a-entity>
+
+        <!-- Interactive Panel -->
+        <a-entity position="2 1 -3" rotation="0 30 0">
+          <a-box color="#000435" width="0.7" depth="0.1" height="0.7" scale="3 3 1"
+                 animation="property: position; to: 2 1.2 -3; dir: alternate; loop: true; dur: 2000">
+            <a-text value="Universal Translator" color="#fff" position="0 0.3 0.06" align="center" width="5"></a-text>
+            <a-text value="Real-time Multilingual Conversion\nVoice Matching Technology\nSign Language Support"
+                   position="0 0 0.06" align="left" width="2.5" color="#ddd" scale="0.8 0.8 0.8"></a-text>
+            <a-ring color="#2ecc71" radius-inner="0.05" radius-outer="0.1" position="0 -0.3 0.06"
+                    animation="property: scale; to: 1.2 1.2 1.2; dir: alternate; loop: true; dur: 1000"></a-ring>
+          </a-box>
+        </a-entity>
+      </a-entity>
+
+      <!-- Holo Chat Projector -->
+      <a-entity position="10 0 0" class="clickable" hologram-controls>
+        <!-- Projector Base -->
+        <a-entity position="0 0 -3">
+          <a-cylinder radius="0.5" height="0.2" color="#2c3e50" material="roughness: 0.6; metalness: 0.4">
+            <a-torus radius="0.5" radius-tubular="0.05" color="#34495e" rotation="90 0 0"
+                     animation="property: rotation; to: 270 0 0; dur: 4000; loop: true"></a-torus>
+          </a-cylinder>
+
+          <!-- Core Emitter -->
+          <a-cylinder radius="0.3" height="0.4" color="#1abc9c" position="0 0.3 0"
+                     material="emissive: #1abc9c; emissiveIntensity: 0.5">
+            <a-sphere radius="0.1" color="#f9ca24" emissive="#f9ca24" position="0 0.2 0"
+                     animation="property: scale; to: 1.5 1.5 1.5; dur: 1000; loop: true"></a-sphere>
+          </a-cylinder>
+
+          <!-- Hologram Display -->
+          <a-entity class="hologram-display" position="0 1.8 0">
+            <a-box color="#3498db" depth="0.2" width="0.5" height="1.2" opacity="0.7"
+                   animation="property: rotation; to: 0 360 0; loop: true; dur: 10000">
+              <a-sphere color="#9b59b6" radius="0.25" opacity="0.7" position="0 0.8 0"
+                       animation="property: position; to: 0 1 0; dir: alternate; dur: 2000; loop: true"></a-sphere>
+              <a-entity particle-system="preset: star; color: #3498db; particleCount: 100"></a-entity>
+            </a-box>
+          </a-entity>
+
+          <!-- Interface Rings -->
+          <a-ring radius-inner="0.6" radius-outer="0.7" color="#00ff00" position="0 1 -0.5"
+                 animation="property: scale; to: 1.5 1.5 1.5; dur: 1200; loop: true">
+            <a-ring radius-inner="0.8" radius-outer="0.9" color="#00cc00" position="0 0 0"
+                   animation="property: scale; to: 1.3 1.3 1.3; dur: 1200; delay: 200; loop: true"></a-ring>
+          </a-ring>
+        </a-entity>
+
+        <!-- Interactive Panel -->
+        <a-entity position="5.5 -1 0" rotation="0 -30 0">
+          <a-box color="#000435" width="0.7" depth="0.1" height="0.9" scale="3 3 1"
+                 animation="property: position; to: 5.5 -0.8 0; dir: alternate; loop: true; dur: 2000">
+            <a-text value="HoloChat Projector" color="#fff" position="0 0.4 0.06" align="center" width="5"></a-text>
+            <a-text value="3D Holographic Communication\nGesture Interface Control\nPortable Projection System"
+                   position="0 0 0.06" align="left" width="2.5" color="#ddd" scale="0.8 0.8 0.8"></a-text>
+            <a-torus color="#00d2d3" radius="0.15" radius-tubular="0.02" position="0 -0.3 0.06"
+                    animation="property: rotation; to: 0 0 360; dur: 3000; loop: true"></a-torus>
+          </a-box>
+        </a-entity>
+      </a-entity>
+
+      <!-- Interactive Controls -->
+      <a-entity id="raycaster" cursor="rayOrigin: mouse"></a-entity>
+    </a-scene>
+
+    <script>
+      AFRAME.registerComponent('mindlink-controls', {
+        init: function() {
+          this.el.addEventListener('click', (e) => {
+            document.getElementById('info').style.display = 'block';
+            document.getElementById('info').innerHTML = `
+              <h3>MindLink Features</h3>
+              <p>- Neural Interface Technology</p>
+              <p>- 1024-channel EEG Sensors</p>
+              <p>- Quantum Encryption Security</p>
+              <p>- Real-time Thought Processing</p>
+            `;
+          });
+        }
+      });
+
+      // Additional component registrations for other devices...
+    </script>
+  </body>
+</html>
